--- a/paquescolar-web/src/main/webapp/app/reg02DetalleOferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02DetalleOferta.xhtml
@@ -123,7 +123,7 @@
                                 </h:outputText>
                             </p:column>
 
-                            <p:column headerText="Estilo" style="text-align: center" width="50" rendered="#{participantesController.showEstilo}">
+                            <p:column headerText="Estilo" style="text-align: center" width="50" rendered="false">
                                 <p:cellEditor>  
                                     <f:facet name="output">
                                         <h:outputText value="#{detalle.estiloZapato}" />
