--- a/cooperacion-web/src/main/webapp/app/mantto/manttoCooperante.xhtml
+++ b/cooperacion-web/src/main/webapp/app/mantto/manttoCooperante.xhtml
@@ -77,130 +77,138 @@
         <p:messages id="messages" showDetail="true" closable="true" escape="false">
             <p:autoUpdate />
         </p:messages>
-        <div class="p-col-12">
-            <div class="card ui-fluid" jsf:id="divDatos">
-                <h5>Datos del Cooperante</h5>
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Nombre Organización:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-10">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="fa fa-building"></i>
-                            </span>
-                            <p:inputText value="#{cooperanteView.cooperante.nombreCooperante}"/>
+
+        <p:breadCrumb>
+            <p:menuitem value="Inicio" url="../inicio.mined" />
+            <p:menuitem value="Mantenimientos" url="inicioManttos.mined" />
+        </p:breadCrumb>
+<br/>
+        <div class="p-grid crud-demo">
+            <div class="p-col-12">
+                <div class="card ui-fluid" jsf:id="divDatos">
+                    <h5>Datos del Cooperante</h5>
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Nombre Organización:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-10">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="fa fa-building"></i>
+                                </span>
+                                <p:inputText value="#{cooperanteView.cooperante.nombreCooperante}"/>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Tipo:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-10">
-                        <p:selectOneMenu value="#{cooperanteView.idTipoCooperante}">
-                            <f:selectItem itemValue="null" itemLabel="Seleccione un valor"/>
-                            <f:selectItems value="#{cooperanteView.lstTipoCooperante}" var="coo" itemValue="#{coo.idTipoCooperante}" itemLabel="#{coo.descripcionCooperante}"/>
-                        </p:selectOneMenu>
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Tipo:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-10">
+                            <p:selectOneMenu value="#{cooperanteView.idTipoCooperante}">
+                                <f:selectItem itemValue="null" itemLabel="Seleccione un valor"/>
+                                <f:selectItems value="#{cooperanteView.lstTipoCooperante}" var="coo" itemValue="#{coo.idTipoCooperante}" itemLabel="#{coo.descripcionCooperante}"/>
+                            </p:selectOneMenu>
+                        </div>
+                    </div>
+
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Nombre Contanto:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-10">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="pi pi-tag"></i>
+                                </span>
+                                <p:inputText id="txtNombreCe" value="#{cooperanteView.cooperante.nombreContacto}" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Teléfono:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-4">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="fa fa-phone" aria-hidden="true"></i>
+                                </span>
+                                <p:inputMask id="txtTelefono" value="#{cooperanteView.cooperante.telefono}" mask="9999-9999"/>
+                            </div>
+                        </div>
+                        <p:outputLabel value="Celular:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-4">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="pi pi-mobile"></i>
+                                </span>
+                                <p:inputMask id="txtCelular" value="#{cooperanteView.cooperante.celular}" mask="9999-9999"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Correo electrónico:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-10">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="pi pi-envelope"></i>
+                                </span>
+                                <p:inputText id="txtCorreoDirector" value="#{cooperanteView.cooperante.correo}"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Nombre Asistente:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-10">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="pi pi-tag"></i>
+                                </span>
+                                <p:inputText id="txtNombreAsistente" value="#{cooperanteView.cooperante.nombreAsistente}" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-field p-grid">
+                        <p:outputLabel value="Dirección" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
+                        <div class="p-col-12 p-md-10">
+                            <div class="ui-inputgroup">
+                                <span class="ui-inputgroup-addon">
+                                    <i class="pi pi-tag"></i>
+                                </span>
+                                <p:inputTextarea id="txtDireccion" value="#{cooperanteView.cooperante.nombreAsistente}" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <br/>
+                    <div class="p-field p-grid">
+                        <div class="p-col-12 p-md-2">
+                            <p:commandButton value="Guardar" action="#{cooperanteView.guardarCooperante()}" icon="pi pi-save" />
+                        </div>
+                        <div class="p-col-12 p-md-2">
+                            <p:commandButton value="Cancelar" icon="pi pi-ban" process="@this" action="inicioManttos.mined?faces-redirect=true"/>
+                        </div>
+                        <div class="p-col-12 p-md-2">
+                            <p:commandButton value="Modifcar" icon="pi pi-pencil" process="@this" onclick="PF('dlgCooperante').show();" />
+                        </div>
                     </div>
                 </div>
 
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Nombre Contanto:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-10">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="pi pi-tag"></i>
-                            </span>
-                            <p:inputText id="txtNombreCe" value="#{cooperanteView.cooperante.nombreContacto}" />
-                        </div>
-                    </div>
-                </div>
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Teléfono:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-4">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
-                            </span>
-                            <p:inputMask id="txtTelefono" value="#{cooperanteView.cooperante.telefono}" mask="9999-9999"/>
-                        </div>
-                    </div>
-                    <p:outputLabel value="Celular:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-4">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="pi pi-mobile"></i>
-                            </span>
-                            <p:inputMask id="txtCelular" value="#{cooperanteView.cooperante.celular}" mask="9999-9999"/>
-                        </div>
-                    </div>
-                </div>
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Correo electrónico:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-10">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="pi pi-envelope"></i>
-                            </span>
-                            <p:inputText id="txtCorreoDirector" value="#{cooperanteView.cooperante.correo}"/>
-                        </div>
-                    </div>
-                </div>
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Nombre Asistente:" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-10">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="pi pi-tag"></i>
-                            </span>
-                            <p:inputText id="txtNombreAsistente" value="#{cooperanteView.cooperante.nombreAsistente}" />
-                        </div>
-                    </div>
-                </div>
-                <div class="p-field p-grid">
-                    <p:outputLabel value="Dirección" styleClass="p-col-12 p-mb-2 p-md-2 p-mb-md-0"/>
-                    <div class="p-col-12 p-md-10">
-                        <div class="ui-inputgroup">
-                            <span class="ui-inputgroup-addon">
-                                <i class="pi pi-tag"></i>
-                            </span>
-                            <p:inputTextarea id="txtDireccion" value="#{cooperanteView.cooperante.nombreAsistente}" />
-                        </div>
-                    </div>
-                </div>
-
-                <br/>
-                <div class="p-field p-grid">
-                    <div class="p-col-12 p-md-2">
-                        <p:commandButton value="Guardar" action="#{cooperanteView.guardarCooperante()}" icon="pi pi-save" />
-                    </div>
-                    <div class="p-col-12 p-md-2">
-                        <p:commandButton value="Cancelar" icon="pi pi-ban" process="@this" action="inicioManttos.mined?faces-redirect=true"/>
-                    </div>
-                    <div class="p-col-12 p-md-2">
-                        <p:commandButton value="Modifcar" icon="pi pi-pencil" process="@this" onclick="PF('dlgCooperante').show();" />
-                    </div>
-                </div>
+                <p:dialog id="dlgCooperante" widgetVar="dlgCooperante" modal="true" closable="false" width="1000" height="500">
+                    <h5>
+                        Listado de Cooperantes
+                    </h5>
+                    <p:dataTable value="#{cooperanteView.lstCooperantes}" var="coo" paginator="true" paginatorPosition="top" rows="10"
+                                 selection="#{cooperanteView.cooperante}" selectionMode="single" rowKey="#{coo.idCooperante}">
+                        <p:ajax update="divDatos" event="rowSelect" listener="#{cooperanteView.onRowSelect}" oncomplete="PF('dlgCooperante').hide();"/>
+                        <p:column headerText="Id" width="10">
+                            <h:outputText value="#{coo.idCooperante}"/>
+                        </p:column>
+                        <p:column headerText="Organización">
+                            <h:outputText value="#{coo.nombreCooperante}"/>
+                        </p:column>
+                        <p:column headerText="Tipo" width="250">
+                            <h:outputText value="#{coo.idTipoCooperante.descripcionCooperante}"/>
+                        </p:column>
+                        <p:column headerText="Contacto" width="300">
+                            <h:outputText value="#{coo.nombreContacto}"/>
+                        </p:column>
+                    </p:dataTable>
+                </p:dialog>
             </div>
-
-            <p:dialog id="dlgCooperante" widgetVar="dlgCooperante" modal="true" closable="false" width="1000" height="500">
-                <h5>
-                    Listado de Cooperantes
-                </h5>
-                <p:dataTable value="#{cooperanteView.lstCooperantes}" var="coo" paginator="true" paginatorPosition="top" rows="10"
-                             selection="#{cooperanteView.cooperante}" selectionMode="single" rowKey="#{coo.idCooperante}">
-                    <p:ajax update="divDatos" event="rowSelect" listener="#{cooperanteView.onRowSelect}" oncomplete="PF('dlgCooperante').hide();"/>
-                    <p:column headerText="Id" width="10">
-                        <h:outputText value="#{coo.idCooperante}"/>
-                    </p:column>
-                    <p:column headerText="Organización">
-                        <h:outputText value="#{coo.nombreCooperante}"/>
-                    </p:column>
-                    <p:column headerText="Tipo" width="250">
-                        <h:outputText value="#{coo.idTipoCooperante.descripcionCooperante}"/>
-                    </p:column>
-                    <p:column headerText="Contacto" width="300">
-                        <h:outputText value="#{coo.nombreContacto}"/>
-                    </p:column>
-                </p:dataTable>
-            </p:dialog>
         </div>
 
         <h:outputStylesheet name="css/primeicons.css" library="paradise-layout" />
