--- a/cooperacion-web/src/main/webapp/index.xhtml
+++ b/cooperacion-web/src/main/webapp/index.xhtml
@@ -11,6 +11,7 @@
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
+            <link href="#{request.contextPath}/resources/images/favicon.png" rel="shortcut icon"/>
         </f:facet>
         <title>Cooperación a Centros Educativos</title>
     </h:head>
