--- a/cooperacion-web/src/main/webapp/app/inicio.xhtml
+++ b/cooperacion-web/src/main/webapp/app/inicio.xhtml
@@ -46,7 +46,7 @@
                     <br/><br/>
                 </div>
             </div>
-            <div class="p-col-6 p-md-4 p-xl-3"  
+            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'reportes.mined';" 
                  style="cursor: pointer; display:#{(userBean.perfilUsuario eq 'ADMIN')?'block':'none'}">
                 <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
                     <br/><br/>
