--- a/cooperacion-web/src/main/webapp/app/reportes.xhtml
+++ b/cooperacion-web/src/main/webapp/app/reportes.xhtml
@@ -23,6 +23,21 @@
                     <p:commandButton value="Matriz Proyectos" ajax="false" action="#{reportesView.generarMatrizProyecto()}"/>
                 </div>
             </div>
+            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'datosCe.mined';" >
+                <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <p:commandButton value="Resumen Fuentes de Finan. " ajax="false" />
+                </div>
+            </div>
+            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'datosCe.mined';" >
+                <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <p:commandButton value="Detalle cooperación" ajax="false" />
+                </div>
+            </div>
+            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'datosCe.mined';" >
+                <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <p:commandButton value="Consolidado etapas de proyectos" ajax="false" />
+                </div>
+            </div>
         </div>
 
 
